--- a/projects/Penghitung Waktu.html
+++ b/projects/Penghitung Waktu.html
@@ -70,12 +70,18 @@
     <h1 id="angka5" style="font-size:50px; text-align:center;">Loading...</h1>
     <h1 id="angka6" style="font-size:40px; text-align:center;">Loading...</h1>
     <!-- <button class="button" onclick="buat()">Buat soal baru</button> -->
+	
+	<p style="font-size:20px;"><b>Beberapa Link:</b></p>
+	<ul>
+		<li><a href="pw1.html">Jam saat ini</a></li>
+		<li><a href="pw2.html">Progress Bar waktu</a></li>
+	</ul>
 
     <br><br>
     <a class="button2" href="../projects.html">Kembali ke menu projects</a>
 
     <br><br>
-    <p>Terakhir diupdate: 1 Des 2023</p>
+    <p>Terakhir diupdate: 20 Jan 2024</p>
 
     <script>
         function buat() {
