--- a/projects/BMI calculator.html
+++ b/projects/BMI calculator.html
@@ -100,6 +100,12 @@
     <button class="button" onclick="calculateBMI()">Calculate</button>
     <br><br>
 
+    <br><br>
+    <a class="button2" href="../projects.html">Kembali ke menu projects</a>
+
+    <br><br>
+    <p>Terakhir diupdate: 25 Jan 2024</p>
+
     <div id="result"></div>
     <script>            
         function calculateBMI() {
