--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
     <div class="top-container title">
@@ -111,8 +113,8 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 15 Jan 2024<br>
-        Copyright © 2023 by Devan
+        Terakhir diupdate: 26 Jan 2024<br>
+        Copyright © 2024 by Devan
         </p>
     </footer>
 </body>
