--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <!-- <style></style> -->
 <body>
@@ -46,6 +46,8 @@
         Dan juga sedang mengembangkan halaman timeline dan updates.
         <br><br>
         Di halaman Hasil Karya sudah menambahkan <b>Canva</b>, <b>Google Form</b>, <b>Kumpulan Website</b>, dan <b>Hasil Karya Kelas 7</b>, sehingga versinya berubah menjadi v1.7.3.
+        <br><br>
+        Font untuk heading sudah berubah dari <b>Raleway</b> ke <b>Inter</b>, dan menunya sudah diperbaiki dan diperlengkap, sehingga versinya berubah menjadi v1.7.4.
         </p>
         <p class="title" style="font-size:25px; color:#000080;">
             <b>Link program:</b>&nbsp;
@@ -215,9 +217,9 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 10 Jan 2024<br>
-        Version: 1.7.3<br>
-        Copyright © 2023 by Devan
+        Terakhir diupdate: 26 Jan 2024<br>
+        Version: 1.7.4<br>
+        Copyright © 2024 by Devan
         </p>
     </footer>
 </body>
