--- a/projects/BMI calculator.html
+++ b/projects/BMI calculator.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <style>
     body {
@@ -13,7 +14,8 @@
         font-family:"Source Sans Pro",sans-serif;
     }
     .heading {
-        font-family:"Raleway Medium",sans-serif;
+        /* font-family:"Raleway Medium",sans-serif; */
+        font-family:"Inter",sans-serif;
     }
     .column {
         float: left;
@@ -60,7 +62,8 @@
     a.button2:hover, a.button2:active {
         background-color: #d0d0d0;
     }
-    input[type=text], select {
+    /* input[type=text], select { */
+    input, select {
         /* width: 100%; */
         width: 200px;
         padding: 5px 10px;
@@ -85,22 +88,25 @@
 <body style="background-color: rgb(244, 255, 244)">
     <h1 class="heading">BMI Calculator</h1>
 
-    <p>Body Mass Index atau disingkat BMI adalah salah satu cara mengetahui berat badan ideal yang diukur berdasarkan berat dan tinggi badan Anda. Dengan menghitungnya menggunakan rumus BMI, Anda bisa melihat apakah status berat badan Anda termasuk kategori normal, kurang, berlebih, atau bahkan obesitas. (Sumber: www.sehataqua.co.id)</p>
+    <p><b>Body Mass Index</b> atau disingkat <b>BMI</b> adalah salah satu cara mengetahui berat badan ideal yang diukur berdasarkan berat dan tinggi badan Anda. Dengan menghitungnya menggunakan rumus BMI, Anda bisa melihat apakah status berat badan Anda termasuk kategori normal, kurang, berlebih, atau bahkan obesitas.<br><br>Sumber: www.sehataqua.co.id</p>
     <img src="images/bmi-image.jpg" width="150">
     <p>Inilah program BMI untuk menghitung tinggi (height) dan berat (weight).</p><br>
+
+    <h2 class="heading">Input Angka</h2>
     <!-- Option for providing height and weight to the user-->
     <!-- <p>Height (in cm)</p> -->
     <label>Height (in cm)</label><br>
-    <input type="text" id="height">
+    <input type="number" id="height" min="1">
     <br><br>
     <label>Weight (in kg)</label><br>
-    <input type="text" id="weight">
+    <input type="number" id="weight" min="1">
     <br><br>
 
     <button class="button" onclick="calculateBMI()">Calculate</button>
     <br><br>
 
-    <div id="result"></div>
+    <h2 class="heading">Hasil Perhitungan</h2>
+    <div id="result">Belum ada hasil</div>
     <br><br>
     
     <a class="button2" href="../projects.html">Kembali ke menu projects</a>
@@ -132,11 +138,11 @@
                 
                 // Dividing as per the bmi conditions
                 if (bmi < 18.6) {
-                    result.innerHTML = `Under Weight : <span>${bmi}</span>`;
+                    result.innerHTML = `Under Weight: <span>${bmi}</span>`;
                 } else if (bmi >= 18.6 && bmi < 24.9) {
-                    result.innerHTML = `Normal : <span>${bmi}</span>`;
+                    result.innerHTML = `Normal: <span>${bmi}</span>`;
                 } else {
-                    result.innerHTML = `Over Weight : <span>${bmi}</span>`;
+                    result.innerHTML = `Over Weight: <span>${bmi}</span>`;
                 }
             }
         }
