--- a/projects/Soal Matematika.html
+++ b/projects/Soal Matematika.html
@@ -3,7 +3,9 @@
 <head>
     <title>Sebuah Permainan - Website Devan</title>
     <!-- <link rel="stylesheet" href="fonts/"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <style>
     body {
@@ -12,7 +14,7 @@
         font-family:"Source Sans Pro",sans-serif;
     }
     .heading {
-        font-family:"Raleway Medium",sans-serif;
+        font-family:"Inter",sans-serif;
     }
     .column {
         float: left;
