--- a/projects/Penghitung Waktu.html
+++ b/projects/Penghitung Waktu.html
@@ -75,13 +75,14 @@
 	<ul>
 		<li><a href="pw1.html">Jam saat ini</a></li>
 		<li><a href="pw2.html">Progress Bar waktu</a></li>
+        <li><a href="pw3.html">Stopwatch</a></li>
 	</ul>
 
     <br><br>
     <a class="button2" href="../projects.html">Kembali ke menu projects</a>
 
     <br><br>
-    <p>Terakhir diupdate: 20 Jan 2024</p>
+    <p>Terakhir diupdate: 29 Jan 2024</p>
 
     <script>
         function buat() {
